; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_system.c_SYS_Time.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_system.c_SYS_Time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@TB_TIMER_CLOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SYS_Time() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  store i32 0, i32* %1, align 4
  store i32 0, i32* %2, align 4
  %4 = call i32 @__SYS_GetRTC(i32* %2)
  %5 = load i32, i32* %2, align 4
  store i32 %5, i32* %1, align 4
  %6 = call %struct.TYPE_3__* (...) @__SYS_LockSram()
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** %3, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i32, i32* %1, align 4
  %11 = sext i32 %10 to i64
  %12 = add nsw i64 %11, %9
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* %1, align 4
  %14 = call i32 @__SYS_UnlockSram(i32 0)
  %15 = load i32, i32* @TB_TIMER_CLOCK, align 4
  %16 = mul nsw i32 %15, 1000
  %17 = load i32, i32* %1, align 4
  %18 = mul nsw i32 %16, %17
  ret i32 %18
}

declare dso_local i32 @__SYS_GetRTC(i32*) #1

declare dso_local %struct.TYPE_3__* @__SYS_LockSram(...) #1

declare dso_local i32 @__SYS_UnlockSram(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
